css/portfolio.css
/*!
 * Start Bootstrap - 1 Col Portfolio HTML Template (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

body {
    width: 100%;
    height: 100%;
    font-family: "Lato", Arial, "Helvetica Neue", Helvetica, sans-serif;
    color: #333;
    font-size: 14px;
    margin-bottom: 3em;
    padding-top: 70px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0 0 25px;
    font-family: Lato, Arial, "Helvetica Neue", Helvetica, sans-serif;
    font-weight: 700;
}

p {
    margin: 0 0 15px;
    font-size: 14px;
    line-height: 1.5;
    text-align: left;
}

h3.project {
    font-weight: 400;
    font-size: 20px;
}

.img-responsive {
    margin-bottom: 25px;
}

p.name {
    text-transform: uppercase;
    margin-top: 15px;
    margin-bottom: 0px;
}

p.res {
    margin: 0 0 0px;
}

hr {
    margin-top: 40px;
    margin-bottom: 40px;
}

a.social {
    color: inherit;
    text-decoration: none;
    padding-right: 10px !important;
    display: inline !important;
}

a:hover {
    color: #6e5e90;
    text-decoration: none;
}

.navbar-default .navbar-nav > li > a {
    color: #333;
}

.navbar-default .navbar-nav > li > a:hover {
    color: #6e5e90;
}

.sidebar-nav {
    float: none;
}

@media (max-width: 767px) {
    .col-sm-2 {
        padding-right: 0px;
        padding-left: 0px;
        width: 100%;
    }
    .col-sm-7 {
        margin-left: 15px;
        margin-right: 15px;
    }
    .navbar-toggle {
        margin-right: 30px;
    }
    .navbar-default {
        background-color: #000;
        color: #fff;
    }
    .navbar-default .navbar-toggle .icon-bar {
        background-color: #fff;
    }
    .navbar-default .navbar-nav > li > a {
        color: #fff;
    }
}

@media (min-width: 768px) {
    body {
        padding-top: 50px;
        margin-bottom: 70px;
    }
    .navbar,
    .navbar-default {
        background-color: inherit;
        border: none;
    }
    .navbar {
        position: relative;
        width: auto;
        z-index: 2;
    }
    .sidebar-nav .navbar .navbar-collapse {
        top: 30%;
        padding: 0;
        max-height: none;
        position: fixed;
    }
    .sidebar-nav .navbar ul {
        float: none;
    }
    .sidebar-nav .navbar ul:not {
        display: block;
    }
    .sidebar-nav .navbar li {
        padding-top: 15px;
        padding-bottom: 15px;
        float: none;
        display: block;
    }
    .sidebar-nav .navbar li a {
        padding: 0px;
    }
}

